fix: update background color in dark mode and enhance styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #101922;
+    --background: #000;
     --foreground: #fff;
   }
 }
